2011-10-15  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_floor.c: New file.

	* sysdeps/ieee754/dbl-64/e_cosh.c: Cleanup.
	* sysdeps/ieee754/dbl-64/wordsize-64/e_cosh.c: New file.

	* math/Versions [libm] (GLIBC_2.15): Add __exp_finite, __expf_finite,
	__expl_finite.
	* math/bits/math-finite.h: Add entries for exp.
	* math/e_expl.c: Add __*_finite alias.
	* sysdeps/i386/fpu/e_exp.S: Likewise.
	* sysdeps/i386/fpu/e_expf.S: Likewise.
	* sysdeps/i386/fpu/e_expl.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_exp.c: Likewise.
	* sysdeps/ieee754/flt-32/e_expf.c: Likewise.
	* sysdeps/ieee754/ldbl-128/e_expl.c: Likewise.
	* sysdeps/ieee754/ldbl-128ibm/e_expl.c: Likewise.
	* sysdeps/ieee754/dbl-64/w_exp.c: Complete rewrite.
	* sysdeps/ieee754/flt-32/w_expf.c: Likewise.
	* sysdeps/ieee754/ldbl-96/w_expl.c: Likewise.

	* sysdeps/i386/i686/fpu/e_logf.S: No need for the fyl2xp1 use, fyl2x
	is sufficient, at least on modern CPUs.

	* ctype/ctype-info.c (__ctype_init): Define.
	* include/ctype.h (__ctype_init): Declare.
	(__ctype_b_loc): The variable is always initialized.
	(__ctype_toupper_loc): Likewise.
	(__ctype_tolower_loc): Likewise.
	* ctype/Versions: Export __ctype_init for GLIBC_PRIVATE.
	* sysdeps/unix/sysv/linux/init-first.c (_init): Call __ctype_init.

2011-10-15  Andreas Schwab  <schwab@linux-m68k.org>

	* wcsmbs/wmemcmp.c (WMEMCMP): Define.

	* configure.in: Also look in $cxxmachine/include for C++ system
	headers.

2011-09-27  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	* sysdeps/x86_64/multiarch/Makefile: (sysdep_routines): Add
	memcmp-ssse3 wmemcmp-sse4 wmemcmp-ssse3 wmemcmp-c
	* sysdeps/x86_64/multiarch/memcmp-ssse3: New file.
	* sysdeps/x86_64/multiarch/memcmp.S: Update.  Add __memcmp_ssse3.
	* sysdeps/x86_64/multiarch/memcmp-sse4.S: Update.
	(USE_AS_WMEMCMP): New macro.
	Fixing indents.
	* sysdeps/x86_64/multiarch/wmemcmp.S: New file.
	* sysdeps/x86_64/multiarch/wmemcmp-ssse3.S: New file.